--- a/index.html
+++ b/index.html
@@ -18,18 +18,15 @@
         <button id="js_fill">Fill</button>
         <button id="js_save">Save</button>
       </div>
-      <div class="control__btns" id="jsbtns">
-        <button class="control__btn" style="background-color: white;"></button>
-        <button class="control__btn" style="background-color: red;"></button>
-        <button class="control__btn" style="background-color: orange;"></button>
-        <button class="control__btn" style="background-color: yellow;"></button>
-        <button class="control__btn" style="background-color: green;"></button>
-        <button class="control__btn" style="background-color: blue;"></button>
-        <button
-          class="control__btn"
-          style="background-color: darkblue;"
-        ></button>
-        <button class="control__btn" style="background-color: violet;"></button>
+      <div class="control__colors" id="jsColors">
+        <div class="control__color" style="background-color: white;"></div>
+        <div class="control__color" style="background-color: red;"></div>
+        <div class="control__color" style="background-color: orange;"></div>
+        <div class="control__color" style="background-color: yellow;"></div>
+        <div class="control__color" style="background-color: green;"></div>
+        <div class="control__color" style="background-color: blue;"></div>
+        <div class="control__color" style="background-color: darkblue;"></div>
+        <div class="control__color" style="background-color: violet;"></div>
       </div>
     </div>
   </body>
