--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paintjs</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="app.js"></script>
   </head>
   <body>
-    <div class="canvas">
-      <canvas></canvas>
-    </div>
+    <canvas class="canvas" id="jsCanvas"></canvas>
+
     <div class="contorls">
       <div class="brush">
-        <input type="range" id="js_range" min="0.1" max="5.0" step="0.1" />
+        <input type="range" id="jsRange" min="0.1" max="5.0" step="0.1" />
       </div>
       <div class="control__mode">
         <button id="js_fill">Fill</button>
@@ -29,5 +27,6 @@
         <div class="control__color" style="background-color: violet;"></div>
       </div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
